<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ribbit</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up_text">Don\'t have an account? Sign up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_empty_username_message">Please make sure you enter a username!</string>
    <string name="login_error_empty_password_message">Please make sure you enter a password!</string>
    <string name="login_error_title">Oops!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="empty_recycper_message">No new messages!</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage.</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="video_size_limit_warning">The selected video must be less than 10 MB.</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a different file.</string>
    <string name="error_file_too_large">The selected file is too large! Select a new file.</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="video_file_size_warning">The selected video must be less than 10 MB.</string>
    <string name="error_opening_file">There was a problem with the selected file.</string>
    <string name="error_file_size_too_large">The selected file is too large! Select a new file.</string>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first!</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file_title">We\'re sorry!</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again.</string>
    <string name="title_activity_view_image">Ribbit</string>
    <string name="content_desc_background">Ribbit Frog Background Image</string>
    <string name="subtitle">A Treehouse Project</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="content_desc_button_divider">Button divider</string>
    <string name="content_desc_message_icon">Message icon</string>
    <string name="content_desc_user_avatar">User avatar</string>
    <string name="content_desc_user_checkmark">User checkmark</string>
    <string name="push_message">You have a new Ribbit message from %s!</string>
    <string name="existing_user_error_title">Can\'t create user</string>
    <string name="delete_friend_message">Are you sure you want to delete person?</string>
    <string name="message_options_pictures">pictures</string>
    <string name="message_options_capture_picture">capture picture</string>
    <string name="message_options_capture_video">capture videos</string>
    <string name="message_options_video">videos</string>
    <string name="message_options_text">text message</string>
    <string name="activity_edit_friend_label">Edit</string>
    <string name="activity_users_label">Search people</string>
    <string name="activity_text_message_label">Edit Message</string>
    <string name="fab_label_text">Text</string>
    <string name="fab_label_picture">Picture</string>
    <string name="fab_label_capture_picture">Capture Picture</string>
    <string name="fab_label_video">Video</string>
    <string name="fab_label_capture_video">Capture Video</string>
    <string name="edit_text_recipients_hint">To</string>
    <string name="signup_upper_case_error">user name can\'t contain upper case letters.</string>
    <string name="profile_picture_error_message">Something went wrong. Can\'t update profile picture at the moment</string>
    <string name="profile_picture_error_title">Unable to update picture</string>
    <string name="account_domain">\@messageApp</string>
    <string name="account_extension">.com</string>
    <string name="video_type">video/*</string>
    <string name="timestamp">yyyyMMdd_HHmmss</string>
    <string name="video_file_name">VID_</string>
    <string name="video_file_format">.mp4</string>
    <string name="image_type">image/*</string>
    <string name="picture_file_name">IMG_</string>
    <string name="picture_file_format">.jpg</string>
    <string name="image_message_hint">Add caption...</string>
    <string name="video_message_hint">Add caption...</string>
    <string name="text_message_hint">Type message...</string>
</resources>
