<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.LoginActivity">

    <android.support.design.widget.AppBarLayout
        style="@style/BarLayout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar">

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/SignProgressBar"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        style="@style/AuthBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        tools:context=".ui.activities.SignUpActivity" >

        <ImageView
            android:id="@+id/backgroundImage"
            style="@style/AuthBackgroundImage"
            android:contentDescription="@string/content_desc_background" />

        <TextView
            android:id="@+id/title"
            style="@style/AuthTitle" />

        <TextView
            android:id="@+id/subtitle"
            style="@style/AuthTitle.AuthSubTitle" />

        <LinearLayout
            android:id="@+id/editTextLayout"
            style="@style/AuthFieldContainer" >

            <EditText
                android:id="@+id/usernameField"
                style="@style/AuthEditText"
                android:hint="@string/username_hint" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/passwordField"
                style="@style/AuthEditText"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/emailField"
                style="@style/AuthEditText"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <ImageView
            android:id="@+id/buttonDivider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextLayout"
            android:layout_centerHorizontal="true"
            android:src="@drawable/button_divider"
            android:contentDescription="@string/content_desc_button_divider"/>

        <Button
            android:id="@+id/signupButton"
            style="@style/AuthButton"
            android:text="@string/sign_up_button_label"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editTextLayout"
            android:layout_toLeftOf="@id/buttonDivider"
            android:layout_marginRight="0dp" />

        <Button
            android:id="@+id/cancelButton"
            style="@style/AuthButton"
            android:text="@string/cancel_button_label"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editTextLayout"
            android:layout_toRightOf="@id/buttonDivider"
            android:layout_marginLeft="0dp" />

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>







